# pb2025_sentry_behavior

./: CMakeLists.txt  README.md  package.xml
behavior_trees/: Project.btproj  dev_rm.xml  field_mapping_training.xml  field_mapping_training_debug.xml  minimal_nav_probe.xml  mobility_test.xml  models.xml  referee_connection_test.xml  rmul_2025.xml  rmul_2025_debug.xml  rmul_2025_no_referee_debug.xml  rmul_2025_reality.xml  rmul_2025_referee_debug.xml  stationary_test.xml
include/pb2025_sentry_behavior/: custom_types.hpp  pb2025_sentry_behavior_server.hpp
include/pb2025_sentry_behavior/plugins/action/: calculate_attack_pose.hpp  print_referee_status.hpp  pub_auto_aim.hpp  pub_gimbal_velocity.hpp  send_nav2_through_poses.hpp
include/pb2025_sentry_behavior/plugins/condition/: is_attacked.hpp  is_game_status.hpp  is_rfid_detected.hpp  is_status_ok.hpp
launch/: pb2025_sentry_behavior_field_training_debug_launch.py  pb2025_sentry_behavior_field_training_launch.py  pb2025_sentry_behavior_launch.py  pb2025_sentry_behavior_probe_launch.py  pb2025_sentry_behavior_reality_launch.py  pb2025_sentry_behavior_referee_debug_launch.py  referee_connection_test_launch.py
params/: sentry_behavior.yaml  sentry_behavior_debug.yaml  sentry_behavior_field_training.yaml  sentry_behavior_field_training_debug.yaml  sentry_behavior_mobility_test.yaml  sentry_behavior_probe.yaml  sentry_behavior_reality.yaml  sentry_behavior_referee_debug.yaml  sentry_behavior_stationary_test.yaml
plugins/action/: calculate_attack_pose.cpp  print_referee_status.cpp  pub_auto_aim.cpp  pub_gimbal_absolute.cpp  pub_gimbal_velocity.cpp  pub_nav2_goal.cpp  send_nav2_goal.cpp  send_nav2_through_poses.cpp
plugins/condition/: is_attacked.cpp  is_game_status.cpp  is_rfid_detected.cpp  is_status_ok.cpp
scripts/: collect_probe_logs.sh  referee_topic_translator.py
src/: pb2025_sentry_behavior_client.cpp  pb2025_sentry_behavior_server.cpp
