<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pb2025_sentry_behavior</name>
  <version>0.0.0</version>
  <description>
    SMBU Polarbear Robotics Team's behavior tree for sentry robot decision-making in RoboMaster 2025, based on BehaviorTree.CPP.
  </description>

  <maintainer email="lihanchen2004@163.com">Lihan Chen</maintainer>
  <license>Apache-2.0</license>
  <author email="lihanchen2004@163.com">Lihan Chen</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_util</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>behaviortree_ros2</depend>
  <depend>pb_rm_interfaces</depend>
  <depend>auto_aim_interfaces</depend>
  <depend>nav2_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>example_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>dji_referee_protocol</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_black</test_depend>

<export>
  <build_type>ament_cmake</build_type>
</export>

</package>
